--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint .",
     "pretest": "npm run lint",
     "test": "npm run test:mocha",
-    "test:mocha": "mocha",
+    "test:mocha": "mocha --timeout 100000",
     "start": "npm run test:mocha -- -w"
   },
   "repository": {
@@ -22,6 +22,11 @@
   "homepage": "https://github.com/rbtprograms/Bubble-sort#readme",
   "devDependencies": {
     "eslint": "^5.1.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "node-stopwatch": "0.0.1"
+  },
+  "dependencies": {
+    "chai": "^4.1.2",
+    "chai-sorted": "^0.2.0"
   }
 }
